# new-api-scheduler-web

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: __init__.py  config_store.py  main.py  models.py  storage.py
app/core/: __init__.py  automation.py
app/services/: job_runner.py  scheduler_service.py
app/static/: app.js  login.js  styles.css
app/templates/: index.html  login.html
data/: config.example.json
infra/aws/: task-definition.json
tests/: test_api.py  test_core_logic.py
